@@ -1,5 +1,10 @@
 2007-06-06  Sven Neumann  <sven@gimp.org>
 
+	* app/core/gimpprojection.c (gimp_projection_estimate_memsize):
+	the projection is 2 bytes per pixel for grayscale images.
+
+2007-06-06  Sven Neumann  <sven@gimp.org>
+
 	* app/core/gimpprojection.[ch]: added function that estimates the
 	memory requirements for an image projection.
 
